Changed the dedication and quotation text, added a rough abstract and a rough acknowledgment

--- a/main.tex
+++ b/main.tex
@@ -130,11 +130,11 @@ Date:\\
 
 \null\vfill % Add some space to move the quote down the page a bit
 
-\textit{``The work presented in this thesis is dedicated to my parents, wife and my entire family for their endless love, support and encouragement."}
+\textit{``Torture the data, and it will confess to anything."}
 
-%\begin{flushright}
-%Dave Barry
-%\end{flushright}
+\begin{flushright}
+Ronald Coase, Economics, Nobel Prize Laureate
+\end{flushright}
 
 \vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
 
@@ -148,7 +148,7 @@ Date:\\
 
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
+With the popularity of Twitter, there has been voluminous growth in the digital footprints of real-life events in the Internet. The references to different types of events in Twitter have the potential to provide extremely valuable information to researchers and organizations, which could be mined and analyzed for making major decisions. There are tremendous applications in the areas of real-life event analysis, opinion mining, reference tracking, online advertising, recommendation engines, cyber security, event management, enterprise data integration, among others. Thus, there is a need of a generic framework that can collect different event references, extract identity information of the events from them and maintain the information persistently for resolving new references to the events and provide updated analytics. The presented research establishes the design and implementation of such a framework from the perspective of Event Identity Information Management (EIIM) in the domain of Twitter. The paper introduces the problem of EIIM in Twitter, discusses the prevalent challenges and proposes the design of a framework capable of managing persistent identity information of pre-specified set of events. We explore the applications of the research, validate the different components of the framework and conclude with our comments on various criteria showing high efficacy and practical utility of our proposed framework.\ldots
 }
 
 \clearpage % Start a new page
@@ -161,7 +161,13 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-The acknowledgements and the people to thank go here, don't forget to include your project advisor\ldots
+I would like to express the deepest appreciation to my committee chair Professor , who has shown the attitude and the substance of a genius: he continually and persuasively conveyed a spirit of adventure in regard to research and scholarship, and an excitement in regard to teaching. Without his supervision and constant help this dissertation would not have been possible.
+
+ 
+
+    I would like to thank my committee members, Professor  and Professor , whose work demonstrated to me that concern for global affairs supported by an “engagement” in comparative literature and modern technology, should always transcend academia and provide a quest for our times.
+
+    In addition, a thank you to Professor , who introduced me to Linguistics, and whose passion for the ``underlying structures" had lasting effect. I thank the University of  for consent to include copyrighted pictures as a part of my dissertation. I also thank Press for permission to include Chapter 5 of my dissertation, which was originally published in Journal. I also want to thank to  Foundation for their financial support granted through predoctoral fellowship.\ldots
 }
 \clearpage % Start a new page
 
@@ -237,7 +243,7 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 
 \pagestyle{empty} % Page style needs to be empty for this page
 
-\dedicatory{For/Dedicated to/To my\ldots} % Dedication text
+\dedicatory{Dedicated to my parents, wife and my entire family for their endless love, support and encouragement.} % Dedication text
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
