updated acknowledgement section

--- a/main.tex
+++ b/main.tex
@@ -161,13 +161,17 @@ With the popularity of Twitter, there has been voluminous growth in the digital 
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-I would like to express the deepest appreciation to my committee chair Professor , who has shown the attitude and the substance of a genius: he continually and persuasively conveyed a spirit of adventure in regard to research and scholarship, and an excitement in regard to teaching. Without his supervision and constant help this dissertation would not have been possible.
+I would like to express the deepest appreciation to my committee chair Dr. John R. Talburt, who has shown the attitude and the substance of a genius. He continiously and persuasively conveyed a spirit of adventure in regard to research and scholarship, and an excitement in regard to directing innovation towards practical problems. Without his supervision and constant support this dissertation would not have been possible.
 
  
 
-    I would like to thank my committee members, Professor  and Professor , whose work demonstrated to me that concern for global affairs supported by an “engagement” in comparative literature and modern technology, should always transcend academia and provide a quest for our times.
+   I would like to thank my committee members, Dr. Elizabeth Pierce, Dr. Ningning Wu, Dr. Russel Bruhn and Dr. Mathias Brochhausen whose high quality contributions in the field of Information Science and Information Quality have inspired me to set high standards in my work, and kept me motivated. I would specially thank Dr. Mathias Brochhausen for devoting his valuable time for discussing about possible applications of ontologies in representing real-life events and the related information content in social media. I strongly consider it as one of the future directions of my research.
 
-    In addition, a thank you to Professor , who introduced me to Linguistics, and whose passion for the ``underlying structures" had lasting effect. I thank the University of  for consent to include copyrighted pictures as a part of my dissertation. I also thank Press for permission to include Chapter 5 of my dissertation, which was originally published in Journal. I also want to thank to  Foundation for their financial support granted through predoctoral fellowship.\ldots
+    In addition, I thank Dr. Vivek Kumar Singh and his team from Banaras Hindu University, India, for collaborating with me and helping me to execute the necessary evaluation tasks in an unbiased way, including manual annotations and feedback. I also acknowledge the support of Mr. Jeff Stinson and Ms. Glediana Rexha for financially supporting the major part of my PhD by allowing me to work as a Graduate Assistant at TechLaunch, University of Arkansas at Little Rock. 
+
+Lastly, I am extremely thankful to Dr. Abhijit Bhattacharyya (Associated Dean, Donaghey College of Engineering and Information Technology), for providing me with advise and encouragement from time to time. This acknowledgement page would be incomplete without thanking the immense support of my friends and family. I thank my parents, wife and friends (sepcially Pathikrit Bhattacharya, Subhashish Duttachowdhury and Meenakshisundaram Balasubramaniam) for not only their support but for their constant interest in my work and the discussions that I had with them. The conversations with them helped me to understand the information seeking behavior of various people from social media, with different perspectives.
+
+
 }
 \clearpage % Start a new page
 
