updated and completed potential applications of EIIM framework

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -27,6 +27,33 @@
   pages = {2154--2165}
 }
 
+@ARTICLE{bollen2009modeling,
+  author = {Bollen, Johan and Pepe, Alberto and Mao, Huina},
+  title = {Modeling public mood and emotion: Twitter sentiment and socio-economic
+	phenomena},
+  journal = {arXiv preprint arXiv:0911.1583},
+  year = {2009}
+}
+
+@ARTICLE{choudhary2012social,
+  author = {Choudhary, Alok and Hendrix, William and Lee, Kathy and Palsetia,
+	Diana and Liao, Wei-Keng},
+  title = {Social media evolution of the Egyptian revolution},
+  journal = {Communications of the ACM},
+  year = {2012},
+  volume = {55},
+  pages = {74--80},
+  number = {5},
+  publisher = {ACM}
+}
+
+@TECHREPORT{gao2011harnessing,
+  author = {Gao, Huiji and Barbier, Geoffrey and Goolsby, Rebecca and Zeng, Daniel},
+  title = {Harnessing the crowdsourcing power of social media for disaster relief},
+  institution = {DTIC Document},
+  year = {2011}
+}
+
 @ARTICLE{ghannam2011social,
   author = {Ghannam, Jeffrey},
   title = {Social Media in the Arab World: Leading up to the Uprisings of 2011},
@@ -114,6 +141,16 @@
   timestamp = {2015.04.06}
 }
 
+@ARTICLE{metzgar2009social,
+  author = {Metzgar, Emily and Maruggi, Albert},
+  title = {Social media and the 2008 US presidential election},
+  journal = {Journal of New Communications Research},
+  year = {2009},
+  volume = {4},
+  pages = {141--165},
+  number = {1}
+}
+
 @ARTICLE{oh2011information,
   author = {Oh, Onook and Agrawal, Manish and Rao, H Raghav},
   title = {Information control and terrorism: Tracking the Mumbai terrorist
@@ -154,5 +191,29 @@
   year = {2010},
   pages = {365--370},
   organization = {IEEE}
+}
+
+@INPROCEEDINGS{tsur2012s,
+  author = {Tsur, Oren and Rappoport, Ari},
+  title = {What's in a hashtag?: content based prediction of the spread of ideas
+	in microblogging communities},
+  booktitle = {Proceedings of the fifth ACM international conference on Web search
+	and data mining},
+  year = {2012},
+  pages = {643--652},
+  organization = {ACM}
+}
+
+@ARTICLE{walker2013russia,
+  author = {Walker, Shaun},
+  title = {Russia to Monitor 'All Communications' at Winter Olympics in Sochi},
+  journal = {The Guardian, October},
+  year = {2013},
+  volume = {6}
+}
+
+@ARTICLE{,
+  owner = {cisstudent},
+  timestamp = {2015.04.09}
 }
 
