--- a/main.tex
+++ b/main.tex
@@ -269,6 +269,11 @@ Lastly, I thank University of Arkansas for providing me with the facilities, fun
     \includegraphics[width=15.5cm,height=8cm]{Figures/EIIMComponents/fullFramework.jpg}
 \end{figure}
 
+\textbf{\LARGE Related Filed Patent}
+\begin{itemize}
+\item A System for Collecting, Ranking and Managing Entity Identity Information from Social Media (US 62135258). Inventors: \textbf{Debanjan Mahata} and John R. Talburt, Assignee: The Board Of Trustees Of The University Of Arkansas.
+\end{itemize}
+
 \textbf{\LARGE Related Publications}
 \begin{itemize}
 \item \textbf{Debanjan Mahata}, John R. Talburt and Vivek Kumar Singh; \textit{Identifying and Ranking of Event-specific Entity-centric Informative Content from Twitter}. $20^{th}$ International Conference On Applications Of Natural Language To Information Systems (NLDB 2015), Passau, Germany. $17^{th}-19^{th}$ June, 2015.
